[package]
name = "manamacro-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = { version = "0.7.7", features = ["ws"] }
axum-swagger-ui = "0.3.0"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
